# AVL-BookSystem

./: .gitignore  AVLNode.cpp  AVLNode.h  AVLTree.cpp  AVLTree.h  Book.cpp  Book.h  BookBorrowInfo.cpp  BookBorrowInfo.h  BookManager.cpp  CMakeLists.txt  FileOperator.cpp  FileOperator.h  Print.cpp  Print.h  README.md  Record.cpp  Record.h  TODO.md  User.cpp  User.h  book.txt  main.cpp  server_main.cpp  user.txt
Book/: Book.cpp  Book.h  BookCopy.cpp  BookCopy.h
controller/: AuthController.cpp  AuthController.h  Router.cpp  Router.h
database/: DatabaseInitializer.cpp  DatabaseInitializer.h  DatabaseOperator.cpp  DatabaseOperator.h
database/dao/: BookCopyDAO.cpp  BookCopyDAO.h  BookDAO.cpp  BookDAO.h  RecordDAO.cpp  RecordDAO.h  UserDAO.cpp  UserDAO.h
entity/: Book.cpp  BookCopy.cpp  Record.cpp  User.cpp  User.h
include/: AVLTree.h  Book.h  BookBorrowInfo.h  BookManager.h  FileOperator.h  Print.h  User.h
public/: admin-book-borrow.html  admin-book-return.html  admin-books.html  admin-borrow.html  admin-exception-feedback.html  admin-readers.html  admin.html  book-detail.html  book-search.html  login.html  my-borrowing.html  reader-profile.html  reader.html  recommendations.html  register.html
service/: BorrowService.cpp  BorrowService.h  InventoryService.cpp  InventoryService.h  SearchService.cpp  SearchService.h  UserService.cpp  UserService.h
utils/: PasswordUtils.cpp  PasswordUtils.h  TxtToDatabaseWriter.cpp  TxtToDatabaseWriter.h
